integ-tests/tests/snapshots/parser__bad_table_names__crlf_literal.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ crlf_literal:1:3
  │
1 │ ['
  │   ^ invalid character '\n' in string


